<resources>
    <string name="app_name">MyCOMS</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="lorem_ipsum">MyCOMS application ease your travel within UPM Campus, anytime to anywhere!
        "\n\n"** Please sign in or sign up using your UPM email address.</string>


    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_login_sample">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_up_short">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="matrik">Matrik Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="start_driving">Start Driving</string>
    <string name="book_a_ride">Book A Ride</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="departure">Departure</string>
    <string name="arrival">Arrival</string>
    <string name="book_ride">Book Ride</string>
    <string name="Manage_booking">MANAGE BOOKING</string>
    <string name="booking_time">Booking Time</string>
    <string name="booking_time_is">Booking time is : %s</string>
    <string name="user_details">USER DETAILS</string>
    <string name="get_current_speed">Get Current Speed</string>
    <string name="info">Waiting for GPS...</string>
    <string name="signed_out">Sign Out</string>
    <string name="go_to_home">Go!</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>

    <string name="notification_text">Tracking, tap to cancel</string>
    <string name="transport_id" translatable="false">123</string>
    <string name="firebase_path" translatable="false">locations</string>
    <string name="firebase_email" translatable="false">test@example.com</string>
    <string name="firebase_password" translatable="false">password</string>
    <string name="current_hour">00</string>
    <string name="current_minute">00</string>
    <string name="booking_status">Your booking status is %s</string>
    <string name="departure_view">d = %s</string>
    <string name="arrival_view">a = %s</string>
    <string name="booking_time_view">t = %s</string>
</resources>
