<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.edwin.fyp.BookRideActivity">

    <ProgressBar
        android:id="@+id/book_ride_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/book_ride_Form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/book_ride_location_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/departure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/departure"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/arrival"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/arrival"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:singleLine="true" />


            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/booking_time"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/booking_time"
                android:textStyle="bold"
                android:onClick="showTimePickerDialog"/>


            <Button
                android:id="@+id/book_ride_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/book_ride"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/show_booking_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/booking_time_is" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
